// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/HeaderCell WithAttributes play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th id="htmlId"
            class="_headerCell_1b9ji_1 _headerCell_standard_1b9ji_1  _headerCell_left_1b9ji_49 dummyClassname"
            lang="nb"
            data-testid="123ID"
        >
          cake
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Tester/Table/HeaderCell WithChildren play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th class="_headerCell_1b9ji_1 _headerCell_standard_1b9ji_1  _headerCell_left_1b9ji_49 ">
          columnheader
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Tester/Table/HeaderCell WithRef play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th class="_headerCell_1b9ji_1 _headerCell_standard_1b9ji_1  _headerCell_left_1b9ji_49 "
            id="dummyIdForwardedFromRef"
        >
          cake
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
